--- a/about/templates/about/home.html
+++ b/about/templates/about/home.html
@@ -28,13 +28,15 @@
         <!--Grid column-->
         <div class="col-md-5 mb-4">
 
-          <h2 class="red-text">Promet Aroma Webshop</h2>
+          <!--<h2 class="red-text">Promet Aroma Webshop</h2>-->
+          <!-- Original version above -->
+          <h2 class="red-text">Promet Aroma</h2>
           <hr>
           <p>Promet Aroma nudi široki asortiman izvrsne Pellini kave,
               Gaggia aparata za kavu te vodene dispenzere i Snack aparate.
               Također vršimo servis aparata za kavu i prodaju rezervnih dijelova.
           </p>
-          <a href="{% url 'products:products_all' %}" class="btn btn-outline-red">Enter!</a>
+          <a href="{% url 'products:products_all' %}" class="btn btn-outline-red">Više</a>
 
         </div>
         <!--Grid column-->
@@ -74,7 +76,7 @@
               <p class="card-text">Široki asortiman izvrsnih Pellini proizvoda. Mljevena,
                   u zrnu i Nespresso kava.
               </p>
-              <a href="{% url 'products:coffee_overview' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:coffee_overview' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -112,7 +114,7 @@
               <p class="card-text">Automati na kovanice, aparati na kapsule, snack strojevi, vodeni
                   dispenzeri i aparati za kavu.
               </p>
-              <a href="{% url 'products:machine_overview' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:machine_overview' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -146,7 +148,7 @@
               <p class="card-text">Servis svih tipova aparata za kavu, kućanskih i profesionalnih.
                   Prodaja rezervnih dijelova.
               </p>
-              <a href="{% url 'about:service' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'about:service' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
