--- a/products/templates/products/coffee_overview.html
+++ b/products/templates/products/coffee_overview.html
@@ -28,7 +28,7 @@
               <!--Text-->
               <p class="card-text">Izvrsna Pellini kava u zrnu.
               </p>
-              <a href="{% url 'products:coffee_sort' 'beans' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:coffee_sort' 'beans' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -59,7 +59,7 @@
               <!--Text-->
               <p class="card-text">Izvrsna Pellini mljevena kava.
               </p>
-              <a href="{% url 'products:coffee_sort' 'ground' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:coffee_sort' 'ground' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -89,7 +89,7 @@
               <!--Text-->
               <p class="card-text">Izvrsna Pellini kava u kapsulama.
               </p>
-              <a href="{% url 'products:coffee_sort' 'capsule' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:coffee_sort' 'capsule' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
