--- a/products/templates/products/machine_overview.html
+++ b/products/templates/products/machine_overview.html
@@ -28,7 +28,7 @@
               <!--Text-->
               <p class="card-text">Vending strojevi.
               </p>
-              <a href="{% url 'products:vending_machine' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:vending_machine' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -59,7 +59,7 @@
               <!--Text-->
               <p class="card-text">eSmart Pellini strojevi.
               </p>
-              <a href="{% url 'products:capsule_machine' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:capsule_machine' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -89,7 +89,7 @@
               <!--Text-->
               <p class="card-text">Raznovrsni izbor.
               </p>
-              <a href="{% url 'products:snack_machine' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:snack_machine' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -127,7 +127,7 @@
               <!--Text-->
               <p class="card-text">Izvorska voda, hladna ili vruća.
               </p>
-              <a href="{% url 'products:water_dispenser' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:water_dispenser' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -158,7 +158,7 @@
               <!--Text-->
               <p class="card-text">Espresso svjetske klase.
               </p>
-              <a href="{% url 'products:product_specific' 'gaggia-classic-pro' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:product_specific' 'gaggia-classic-pro' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
@@ -188,7 +188,7 @@
               <!--Text-->
               <p class="card-text">Superautomat za kavu.
               </p>
-              <a href="{% url 'products:product_specific' 'gaggia-magenta-plus' %}" class="btn btn-outline-red">Enter!</a>
+              <a href="{% url 'products:product_specific' 'gaggia-magenta-plus' %}" class="btn btn-outline-red">Više</a>
             </div>
 
           </div>
