--- a/products/templates/products/search.html
+++ b/products/templates/products/search.html
@@ -7,7 +7,7 @@
       <form method = 'POST'>
             {% csrf_token %}
             {{ form }}
-          <button class="btn btn-outline-green" type="submit">Search</button>
+          <button class="btn btn-outline-green" type="submit">Pretraži</button>
       </form>
     </div>
   </div>
