--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -24,32 +24,33 @@
 
 
 
-
-                            {% if request.is_secure %}
-                                <button class="snipcart-add-item btn btn-light btn-sm mr-1 mb-2"
-                                data-item-id="{{ product.id }}"
-                                data-item-price="{{ product.price }}"
-                                data-item-url="https://{{ request.get_host }}{{ product.get_absolute_url }}"
-                                data-item-description="{{ product.description }}"
-                                data-item-name="{{ product.title }}"
-                                >
-                                <i class="fas fa-shopping-cart pr-2"></i>Add to cart
-                                </button>
-                            {% else %}
-                                <button class="snipcart-add-item btn btn-light btn-sm mr-1 mb-2"
-                                data-item-id="{{ product.id }}"
-                                data-item-price="{{ product.price }}"
-                                data-item-url="http://{{ request.get_host }}{{ product.get_absolute_url }}"
-                                data-item-description="{{ product.description }}"
-                                data-item-name="{{ product.title }}"
-                                >
-                                <i class="fas fa-shopping-cart pr-2"></i>Add to cart
-                                </button>
-                            {% endif %}
+                        <!--Snipcart button-->
+                            <!--{% if request.is_secure %}-->
+                            <!--    <button class="snipcart-add-item btn btn-light btn-sm mr-1 mb-2"-->
+                            <!--    data-item-id="{{ product.id }}"-->
+                            <!--    data-item-price="{{ product.price }}"-->
+                            <!--    data-item-url="https://{{ request.get_host }}{{ product.get_absolute_url }}"-->
+                            <!--    data-item-description="{{ product.description }}"-->
+                            <!--    data-item-name="{{ product.title }}"-->
+                            <!--    >-->
+                            <!--    <i class="fas fa-shopping-cart pr-2"></i>Add to cart-->
+                            <!--    </button>-->
+                            <!--{% else %}-->
+                            <!--    <button class="snipcart-add-item btn btn-light btn-sm mr-1 mb-2"-->
+                            <!--    data-item-id="{{ product.id }}"-->
+                            <!--    data-item-price="{{ product.price }}"-->
+                            <!--    data-item-url="http://{{ request.get_host }}{{ product.get_absolute_url }}"-->
+                            <!--    data-item-description="{{ product.description }}"-->
+                            <!--    data-item-name="{{ product.title }}"-->
+                            <!--    >-->
+                            <!--    <i class="fas fa-shopping-cart pr-2"></i>Add to cart-->
+                            <!--    </button>-->
+                            <!--{% endif %}-->
+                            <!--Snipcart button-->
 
                               <a href="{{ product.get_absolute_url }}" class="btn btn-light btn-sm mr-1 mb-2"><i class="fas fa-info-circle pr-2"></i>Detaljnije</a>
 
-                              <span><p>Price: {{ product.price }} kn</span>
+                              <span><p>Cijena: {{ product.price }} kn</span>
 
                         </div>
 
