--- a/products/templates/products/product_specific.html
+++ b/products/templates/products/product_specific.html
@@ -7,7 +7,7 @@
         <div class="card-group">
 
             {% for o in object %}
-            <div class="col-md-4">
+            <div class="col-md-4 mx-auto">
                 <div class="card mb-5">
                     <div class="view overlay embed-responsive embed-responsive-1by1 img-fluid">
                         <img src="{{ o.cover.url }}" alt="" class="card-img-top embed-responsive-item">
