--- a/about/templates/about/home.html
+++ b/about/templates/about/home.html
@@ -10,7 +10,7 @@
 
             <div class="z-depth-1-half">
 
-              <img src="{% static 'about/promet_aroma_banner2.jfif' %}" class="view overlay card-img-top" alt="promet aroma">
+              <img src="{% static 'about/coffee_banner3.jpg' %}" class="view overlay card-img-top" alt="promet aroma">
 
             <div class="mask rgba-white-light"></div>
 
